--- a/app/templates/products/product_list.html
+++ b/app/templates/products/product_list.html
@@ -7,6 +7,8 @@
     <title></title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f3b99b4317.js" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.4.0/firebase-storage.js"></script>
+
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     
 </head>
