product_list.html

--- a/app/templates/products/product_list.html
+++ b/app/templates/products/product_list.html
@@ -29,7 +29,7 @@
             {% for product in products %}
             <div class="col"> <!-- Adjusted column width -->
                 <div class="card h-100 product-card p-1 d-flex justify-content-center align-items-center">
-                    <img src="{{ product.image.url }}" class="product-img img-fluid" alt="{{ product.name }}">
+                    <img src="{{ product.imgbb_url }}" class="product-img img-fluid" alt="{{ product.name }}">
                     <div class="card-body ">
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">₦{{ product.price }}</p>
